fixed almost everything, generatedpath now uses slider; also implemented helpBox, tools get visible/invisible on select

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,73 @@ body {background-color: #161c2c;
     cursor: url("/assets/icons/cursor/rszcursor.png"), auto;
 }
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(22, 28, 44); /* Fallback color */
+    background-color: rgba(22,28,44,0.8); /* Black w/ opacity */
+}
+.modal-content{
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #323e64;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #323e64;
+    color: white;
+}
+
+
 
 .sidebar {
     height: 100%;
@@ -18,33 +85,40 @@ body {background-color: #161c2c;
     padding-top: 60px;
 }
 
-#togglePathID.buttonDesign{
+.buttonDesignColorPicker{
     background: transparent;
-    margin-left: 0px;
-    margin-top: 0px;
+    cursor: url("assets/icons/cursor/rszpointer.png"), auto;
     border: none;
+
+}
+.buttonDesignColorPicker img{
+    /*box-shadow: inset 0px 0px 0px 2px #fff;*/
+
+    border: 4px solid #161c2c;
+    border-radius: 50%;
+}
+.buttonDesignColorPicker img:hover{
+    border: 4px solid #354167;
+}
+.buttonDesignColorPicker img:active{
+    border: 4px solid #2b3244;
 }
 
-#toggleGrassID.buttonDesign{
-    background: transparent;
-}
-
-#toggleWaterID.buttonDesign{
-    background: transparent;
+.buttonDesignColorPicker img:focus{
+    border: 4px solid #fff;
 }
 
 .slideContainer{
     transform: rotate(270deg); /* Drehung des containers */
-
+    transform-origin: top right;
+    margin-top: -12vh;
 }
 
 /* The slider itself */
 .slider {
-    margin-top: 100%;
-    margin-left: 35%;
     cursor: url("assets/icons/cursor/rszcursor.png"), auto;
     -webkit-appearance: none;
-    width: 65%;
+    width: 200px;
     height: 10px;
     border-radius: 5px; /* Rundheit der Kanten */
     background: #ffb564;
@@ -73,96 +147,90 @@ body {background-color: #161c2c;
 
 .buttonDesign {
     cursor: url("/assets/icons/cursor/rszpointer.png"), auto;
-
+    border:none;
     background-color: #161c2c;
-    color: white;
-    padding: 10px 15px;
-    border: none;
+    padding: 10px;
+}
+.buttonDesign:hover{
+    border: 5px solid #161c2c;
 }
 
-.buttonDesign:active{
-    background-color: #f1f1f1;
+.toolButton{
+    cursor: url("/assets/icons/cursor/rszpointer.png"), auto;
+    padding: 2px;
+    border: 5px solid #ffb564;
 }
+.toolButton:hover{
+    border: 5px solid #866138;
+}
+.toolButton:active{
+    border: 5px solid #ad7a48;
+}
+
+
 
 .buttonDesignFocusTool {
     cursor: url("/assets/icons/cursor/rszpointer.png"), auto;
 
-    background-color: #161c2c;
-    color: white;
-    padding: 10px 15px;
-    border: none;
 }
 
-.buttonDesignFocusTool:focus{
+
+.buttonDesignFocusTool:active{
     background-color: #f1f1f1;
 }
 
-.dobuttons{
-    cursor: url("/assets/icons/cursor/rszpointer.png"), auto;
-    background-color: #161c2c;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-}
-
-.dobuttons:disabled{
-    background-color: #666666;
-    color: #cccccc;
-}
 .buttonRightGroup{
     display: grid;
-    grid-template-columns: 48% 30%;
+    grid-template-columns: 0.5fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap:0px;
 }
 .rightDiv1{
     grid-area: 1 / 1 / 2 / 2;
-
     margin-left: 5px;
+
 }
 .rightDiv2{
-    grid-area: 1 / 2 / 2 / 3;
-    align-items: start;
+    grid-area: 1 / 2 / 2 / 3; /*align-items: start;*/
 }
 
 .buttonLeftGroup{
     display: grid;
-    grid-template-columns: 60% 20% 20%;
-    grid-auto-rows: auto;
+    grid-template-columns: 2.5fr 1.2fr 0.4fr;
+    /*grid-auto-rows: auto;*/
     /*grid-column-gap: 5px;*/
     /*grid-row-gap: 0px;*/
 }
 
 .leftDiv1{
     grid-area: 1 / 1 / 2 / 2;
+
 }
 .leftDiv2{
     grid-area: 1 / 2 / 2 / 3;
-    text-align: right;
+    margin: 0 auto;
+    text-align: end;
 
 }
 .leftDiv3{
     grid-area: 1 / 3 / 2 / 4;
+    text-align: end;
 }
-.freeDrawingBrushes {
 
-}
-.tools{
-    text-align: right;
-}
 
 .parent {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: #161c2c;
-    gap: 16px;
+    gap: 10px;
 }
 /* { grid-area: x / y / z / v; }
 x = Reihe, y = Spalte, z = Spanne/Breite, v = Höhe */
 
 .div1 {
     grid-area: 1 / 1 / 2 / 2;
+
 }
 .div2 { grid-area: 1 / 2 / 2 / 3; }
 .div3 { grid-area: 1 / 3 / 2 / 4; }
@@ -197,5 +265,5 @@ x = Reihe, y = Spalte, z = Spanne/Breite, v = Höhe */
 
 .canvas{
     cursor:  url("/src/assets/icons/cursor/rszcursor.png"), auto;
-    border: 7px solid #ffb564;
+    border: 6px solid #ffb564;
 }
